[gd_scene load_steps=6 format=3 uid="uid://jjnb7nscg65j"]

[ext_resource type="Script" path="res://src/prefabs/ConfirmMenu.gd" id="1_lloka"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a2378"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fb576"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i1upk"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 0.580392)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sof5g"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 0.372549)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ConfirmMenu" type="Panel"]
offset_right = 600.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a2378")
script = ExtResource("1_lloka")

[node name="Header" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -108.0
offset_right = 228.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Are You Sure?"
horizontal_alignment = 1

[node name="Subheader" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -21.0
offset_right = 263.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "Your project has unsaved changes"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = 50.0
offset_right = 280.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Discard" type="Button" parent="Buttons"]
modulate = Color(1, 0, 0, 1)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_fb576")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i1upk")
theme_override_styles/normal = SubResource("StyleBoxFlat_sof5g")
text = "Discard"

[node name="ColorRect" type="ColorRect" parent="Buttons/Discard"]
show_behind_parent = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 180.0
offset_bottom = 56.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Cancel" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_fb576")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i1upk")
theme_override_styles/normal = SubResource("StyleBoxFlat_sof5g")
text = "Cancel"

[node name="ColorRect" type="ColorRect" parent="Buttons/Cancel"]
show_behind_parent = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 180.0
offset_bottom = 56.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Save" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_fb576")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i1upk")
theme_override_styles/normal = SubResource("StyleBoxFlat_sof5g")
text = "Save"

[node name="ColorRect" type="ColorRect" parent="Buttons/Save"]
show_behind_parent = true
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 180.0
offset_bottom = 56.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="button_up" from="Buttons/Discard" to="." method="_on_discard_button_up"]
[connection signal="button_up" from="Buttons/Cancel" to="." method="_on_cancel_button_up"]
[connection signal="button_up" from="Buttons/Save" to="." method="_on_save_button_up"]
